crates/tests/src/snapshots/fe_compiler_tests__compile_errors__cannot_move2.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(&path, &src)"

---
error: can't move value onto stack
  ┌─ compile_errors/cannot_move2.fe:6:18
  │
6 │     c:u256[20] = x + y
  │                  ^ Value to be moved
  │
  = Note: Can't move `u256[10]` types on the stack


